namespace java com.didi.example.dto

struct UserDto {
  1:optional i64 id,
  2:string name,
  3:optional string mobile,
  4:optional bool isDeleted
}
