namespace java com.didi.example.lib

exception MyException{
    1:i32 code,
    2:string msg
}